--- a/src/package.json
+++ b/src/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "dependencies": {
     "elliptic": "^6.5.4",
-    "express": "^4.17.1",
-    "ffi-napi": "^4.0.3"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
@@ -16,7 +15,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel src --out-dir dist"
+    "start": "babel src --out-dir dist",
+    "run": "node server.mjs"
   },
   "author": "",
   "license": "ISC"
