Improved code and documentation
Removed unnecessary dependencies
Created documentation.
Added some inline comments for better readability

--- a/libs/package.json
+++ b/libs/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "elliptic": "^6.5.4",
-    "express": "^4.17.1",
-    "ffi-napi": "^4.0.3"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
