--- a/src/package.json
+++ b/src/package.json
@@ -15,8 +15,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel src --out-dir dist",
-    "run": "node server.mjs"
+    "start": "node server.mjs"
   },
   "author": "",
   "license": "ISC"
