--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nodejssample",
+  "name": "Phantasma NodeJS",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.mjs",
   "type": "module",
   "dependencies": {
     "bs58": "^4.0.1",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel src --out-dir dist"
+    "start": "node src/server.mjs"
   },
   "author": "",
   "license": "ISC"
